# posix-macos-addons

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  hello
.github/workflows/: ci-macos.yml
compatibility/: CMakeLists.txt  compatibility.c
examples/: CMakeLists.txt
examples/mqueue-programs/: mqcreate.c  testmq.c
examples/posix-message-queue-by-stevens/: CMakeLists.txt
mqueue/: CMakeLists.txt
mqueue/include/mqueue/: mqueue.h  unpipc.h
mqueue/src/: error.c  mq_close.c  mq_getattr.c  mq_notify.c  mq_open.c  mq_receive.c  mq_send.c  mq_setattr.c  mqueue.c
posix-message-queue-by-stevens/: CMakeLists.txt  main.c
programs/: CMakeLists.txt  testmq.c
src/: CMakeLists.txt
src/mqueue/: CMakeLists.txt  README.md
src/mqueue/include/mqueue/: mqueue-internal.h  mqueue.h  unpipc.h
src/mqueue/src/: error.c  mq_close.c  mq_getattr.c  mq_internal_fs.c  mq_notify.c  mq_open.c  mq_receive.c  mq_send.c  mq_setattr.c  mq_timedreceive.c  mq_timedsend.c  mq_unlink.c
src/mqueue/src/new/: mq_receive_new_unused.c  mymq_receive.c
src/pthread/: CMakeLists.txt  posix-mac-pthread.c  posix-macos-pthread.c  posix-macos-pthread.h  pthread-mac.c  pthread-mac.h
src/semaphore/: CMakeLists.txt  posix-mac-semaphore.c  posix-mac-semaphore.h  posix-mac-semaphore2-debug.c  posix-mac-semaphore2-debug.h  posix-mac-semaphore2.c  posix-mac-semaphore2.h  posix-macos-semaphore.c  posix-macos-semaphore.h  posix-macos-semaphore2-debug.c  posix-macos-semaphore2-debug.h  posix-macos-semaphore2.c  posix-macos-semaphore2.h  semaphore-mac.c  semaphore-mac.h
src/signal/: CMakeLists.txt  signal-addons.c  signal-addons.h
src/stubs/: CMakeLists.txt  posix-mac-stubs.c  posix-mac-stubs.h  posix-macos-stubs.h  rt.c  rt.h
src/time/: CMakeLists.txt  posix-mac-time.c  posix-mac-time.h  posix-macos-time.c  posix-macos-time.h  time-addons.c  time-addons.h
src/timer/: CMakeLists.txt  mac_timer.c  mac_timer.h  posix-mac-timer.c  posix-macos-timer.c  posix-macos-timer.h
system-v-message-queue-example/: CMakeLists.txt  main.c
tests/: BasicTest.cpp  CMakeLists.txt  IPC_Test.cpp  NotificationTest.cpp  SIGUSR1_Test.cpp
tests/googletest/: CMakeLists.txt
tests/googletest/include/gtest/: gtest.h
tests/googletest/include/gtest/internal/: gtest-internal.h
tests/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
tests/mqueue-tests/: BasicTest.cpp  IPCTest.cpp  NotificationTest.cpp  TimedSendReceiveTest.cpp
tests/pthread-tests/: Pthread_SetSchedPrio_Test.cpp
tests/semaphore-tests/: Semaphore2_Debug_Test.cpp  Semaphore2_Test.cpp  Semaphore_Test.cpp
tests/time-tests/: NanoSleepTest.cpp  NanoSleep_TimeDiff_Test.cpp
tests/timer-tests/: TimerTest.cpp
